@@ -10,12 +10,14 @@ partman-partitioning (54) UNRELEASED; urgency=low
     - add init.d/unsupported previously in partman-base
     - add partman/*_label templates previously in partman-base
     Part of this change was originally suggested by Jérémy Bobbio.
+  * disk-label.sh: allow not to prompt for new disk label if default is valid
+    (for use during guided partitioning).
 
   [ Colin Watson ]
   * Quote $(FS_DEPENDS) in dh_gencontrol arguments to avoid gotcha when
     adding extra items to it.
 
- -- Frans Pop <fjp@debian.org>  Wed, 05 Dec 2007 18:22:23 +0100
+ -- Frans Pop <fjp@debian.org>  Sat, 08 Dec 2007 13:47:07 +0100
 
 partman-partitioning (53) unstable; urgency=low
 
